--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -99,6 +99,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/tvSearch"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/vs_100"
@@ -139,6 +140,7 @@
 
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/tvPush"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/vs_100"
@@ -218,6 +220,7 @@
 
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/tvSetting"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/vs_100"
