--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -107,7 +107,7 @@
                     android:gravity="center"
                     android:text="Live"
                     android:textAlignment="gravity"
-                    android:textColor="@color/color_CC0889b8"
+                    android:textColor="@color/color_CC0889B8"
                     android:textSize="@dimen/ts_20" />
 
             </LinearLayout>
