--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="color_32364E">#32364E</color>
     <color name="color_6632364E">#6632364E</color>
     <color name="color_CCFFFFFF">#BBFFFFFF</color>
+    <color name="color_CC0889B8">#CC0889B8</color>
     <color name="color_0CADE2">#0CADE2</color>
     <color name="color_6CFFFFFF">#6CFFFFFF</color>
     <color name="color_66000000">#66000000</color>
