--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -100,11 +100,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_gravity="top"
                     android:layout_marginLeft="@dimen/vs_1"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
-                    android:gravity="center"
+                    android:gravity="top"
                     android:text="Live"
                     android:textAlignment="gravity"
                     android:textColor="@color/color_CC0889B8"
