--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -82,6 +82,7 @@
                     android:layout_height="@dimen/vs_60"
                     android:layout_gravity="center"
                     android:alpha="0.75"
+                    android:paddingLeft="@dimen/vs_15"
                     android:src="@drawable/icon_live" />
 
                 <TextView
