--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -111,7 +111,7 @@
 			android:id="@+id/ll_typeSelect"
 			android:layout_width="wrap_content"
 			android:layout_height="match_parent"
-			android:layout_margin="20dp"
+			android:layout_margin="2dp"
 			android:background="@drawable/bg_channel_list"
 			android:baselineAligned="false"
 			android:padding="0dp">
@@ -124,7 +124,7 @@
 
 				<com.owen.tvrecyclerview.widget.TvRecyclerView
 					android:id="@+id/mGroupGridView"
-					android:layout_width="@dimen/vs_240"
+					android:layout_width="@dimen/vs_140"
 					android:layout_height="wrap_content"
 					android:divider="@null"
 					android:fadeScrollbars="false"
@@ -193,7 +193,7 @@
 
 			<com.owen.tvrecyclerview.widget.TvRecyclerView
 				android:id="@+id/mChannelGridView"
-				android:layout_width="@dimen/vs_280"
+				android:layout_width="@dimen/vs_180"
 				android:layout_height="match_parent"
 				android:divider="@null"
 				android:fadeScrollbars="false"
@@ -210,6 +210,7 @@
 
 			<LinearLayout
 				android:id="@+id/divLoadEpg"
+				android:visibility="gone"
 				style="@style/epg_window_btn"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
@@ -364,8 +365,7 @@
         android:paddingBottom="5mm"
         android:textColor="@android:color/white"
         android:textSize="36mm"
-        android:textStyle="bold"
-        android:visibility="gone" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvTime"
@@ -378,8 +378,8 @@
         android:background="@android:color/transparent"
         android:gravity="center"
         android:textColor="@android:color/white"
-        android:textSize="22mm"
-        android:visibility="gone" />
+        android:textSize="22mm" />
+
     <TextView
         android:id="@+id/tvNetSpeed"
 		android:paddingRight="@dimen/vs_20"
@@ -391,8 +391,8 @@
         android:background="@android:color/transparent"
         android:gravity="center"
         android:textColor="@android:color/white"
-        android:textSize="22mm"
-        android:visibility="gone" />
+        android:textSize="22mm" />
+
 
 
 	<!--频道序号显示-->
