--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -124,7 +124,7 @@
 
 				<com.owen.tvrecyclerview.widget.TvRecyclerView
 					android:id="@+id/mGroupGridView"
-					android:layout_width="@dimen/vs_140"
+					android:layout_width="@dimen/vs_180"
 					android:layout_height="wrap_content"
 					android:divider="@null"
 					android:fadeScrollbars="false"
@@ -199,14 +199,14 @@
 				android:fadeScrollbars="false"
 				android:focusable="true"
 				android:listSelector="@drawable/item_bg_selector_right"
-				android:padding="5dp"
+				android:padding="2dp"
 				android:scrollbars="none" />
 
-			<LinearLayout
+			<!-- <LinearLayout
 				android:layout_width="1dp"
 				android:layout_height="match_parent"
 				android:layout_margin="2dp"
-				android:background="#FF333333" />
+				android:background="#FF333333" /> -->
 
 			<LinearLayout
 				android:id="@+id/divLoadEpg"
