--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -717,12 +717,12 @@
 		android:orientation="vertical"
 		android:id="@+id/ll_right_top_loading"
 		android:background="@drawable/shape_user_search"
-		android:layout_width="@dimen/vs_240"
-		android:layout_height="@dimen/vs_70"
+		android:layout_width="@dimen/vs_150"
+		android:layout_height="@dimen/vs_60"
 		android:layout_marginTop="25mm"
 		android:layout_marginRight="5mm"
 
-		android:minWidth="170px">
+		android:minWidth="150px">
 		<!--
 		<ImageView
 			android:id="@+id/iv_circle_bg"
@@ -753,7 +753,7 @@
 			android:layout_toStartOf="@+id/iv_circle_bg"
 			android:layout_toLeftOf="@+id/iv_circle_bg"
 			android:ellipsize="marquee"
-			android:gravity="center"
+			android:gravity="right"
 			android:marqueeRepeatLimit="marquee_forever"
 			android:singleLine="true"
 			android:text="测试频道"
