--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -373,8 +373,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginTop="1mm"
-        android:layout_marginRight="5mm"
+        android:layout_marginTop="0mm"
+        android:layout_marginRight="1mm"
         android:background="@android:color/transparent"
         android:gravity="center"
         android:textColor="@android:color/white"
@@ -760,22 +760,44 @@
 			android:textColor="#FFFCFFFF"
 			android:textSize="@dimen/vs_20" />
 
-		<TextView
-			android:id="@+id/tv_right_top_tipnetspeed"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_alignParentBottom="true"
+		<LinearLayout
+			android:layout_height="match_parent"
 			android:layout_gravity="right"
-			android:layout_marginEnd="@dimen/vs_5"
-			android:layout_marginRight="@dimen/vs_5"
-			android:layout_toStartOf="@+id/iv_circle_bg"
-			android:layout_toLeftOf="@+id/iv_circle_bg"
 			android:gravity="right"
-			android:singleLine="true"
-			android:text=""
-			tools:text="0Kb/s"
-			android:textColor="#FFFCFFFF"
-			android:textSize="@dimen/vs_20" />
+			android:orientation="horizontal"
+			android:visibility="visible" >
+
+			<TextView
+				android:id="@+id/tv_right_top_channel_numX"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_alignParentBottom="true"
+				android:layout_gravity="right"
+				android:layout_marginEnd="@dimen/vs_5"
+				android:layout_marginRight="@dimen/vs_5"
+				android:gravity="right"
+				android:singleLine="true"
+				android:text=""
+				tools:text="0"
+				android:textColor="#FFFCFFFF"
+				android:textSize="@dimen/vs_25" />
+
+			<TextView
+				android:id="@+id/tv_right_top_tipnetspeed"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_alignParentBottom="true"
+				android:layout_gravity="right"
+				android:layout_marginEnd="@dimen/vs_5"
+				android:layout_marginRight="@dimen/vs_5"
+				android:gravity="right"
+				android:singleLine="true"
+				android:text=""
+				tools:text="0Kb/s"
+				android:textColor="#C1CCCC"
+				android:textSize="@dimen/vs_20" />
+
+		</LinearLayout>
 	</RelativeLayout>
 
 
