--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -761,6 +761,8 @@
 			android:textSize="@dimen/vs_20" />
 
 		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
 			android:layout_height="match_parent"
 			android:layout_gravity="right"
 			android:gravity="right"
@@ -768,7 +770,7 @@
 			android:visibility="visible" >
 
 			<TextView
-				android:id="@+id/tv_right_top_channel_numX"
+				android:id="@+id/tv_right_top_channel_numx"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_alignParentBottom="true"
