--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -763,11 +763,9 @@
 		<LinearLayout
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_height="match_parent"
 			android:layout_gravity="right"
 			android:gravity="right"
-			android:orientation="horizontal"
-			android:visibility="visible" >
+			android:orientation="horizontal">
 
 			<TextView
 				android:id="@+id/tv_right_top_channel_numx"
@@ -775,12 +773,10 @@
 				android:layout_height="wrap_content"
 				android:layout_alignParentBottom="true"
 				android:layout_gravity="right"
-				android:layout_marginEnd="@dimen/vs_5"
 				android:layout_marginRight="@dimen/vs_5"
 				android:gravity="right"
 				android:singleLine="true"
 				android:text=""
-				tools:text="0"
 				android:textColor="#FFFCFFFF"
 				android:textSize="@dimen/vs_25" />
 
@@ -790,7 +786,6 @@
 				android:layout_height="wrap_content"
 				android:layout_alignParentBottom="true"
 				android:layout_gravity="right"
-				android:layout_marginEnd="@dimen/vs_5"
 				android:layout_marginRight="@dimen/vs_5"
 				android:gravity="right"
 				android:singleLine="true"
