--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -374,9 +374,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_marginTop="0mm"
-        android:layout_marginRight="1mm"
+        android:layout_marginRight="0mm"
         android:background="@android:color/transparent"
-        android:gravity="center"
+        android:gravity="top"
         android:textColor="@android:color/white"
         android:textSize="22mm" />
 
