--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -36,6 +36,7 @@
     <dimen name="vs_12">12mm</dimen>
     <dimen name="vs_15">15mm</dimen>
     <dimen name="vs_20">20mm</dimen>
+    <dimen name="vs_22">22mm</dimen>
     <dimen name="vs_24">24mm</dimen>
     <dimen name="vs_25">25mm</dimen>
     <dimen name="vs_28">28mm</dimen>
