--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -373,6 +373,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+		android:layout_alignParentRight="true"
         android:layout_marginTop="0mm"
         android:layout_marginRight="0mm"
         android:background="@android:color/transparent"
@@ -647,7 +648,7 @@
 		android:id="@+id/ll_right_top_huikan"
 		android:visibility="gone"
 		android:background="@drawable/shape_thumb_bottom_name"
-		android:layout_width="250px"
+		android:layout_width="550px"
 		android:layout_height="100px"
 		android:layout_marginTop="40px"
 		android:layout_marginRight="50px"
