--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -736,7 +736,7 @@
 		android:layout_marginTop="25mm"
 		android:layout_marginRight="5mm"
 		android:minWidth="200px">
-		<!--
+		<!-- 不能删 id 被下面引用了 -->
 		<ImageView
 			android:id="@+id/iv_circle_bg"
 			android:layout_width="@dimen/vs_40"
@@ -746,7 +746,7 @@
 			android:layout_alignParentTop="true"
 			android:layout_alignParentRight="true"
 			android:layout_alignParentBottom="true" />
-			-->
+			
 		<ImageView
 			android:layout_width="@dimen/vs_40"
 			android:layout_height="@dimen/vs_40"
