--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,12 +9,12 @@
         android:id="@+id/topLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/vs_50"
-        android:layout_marginTop="@dimen/vs_10"
+        android:layout_marginTop="@dimen/vs_1"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="@dimen/vs_50"
         android:paddingRight="@dimen/vs_50"
-        android:paddingBottom="@dimen/vs_10"
+        android:paddingBottom="@dimen/vs_1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -28,6 +28,7 @@
             android:gravity="left|center_vertical"
             android:text="@string/app_name"
             android:textAlignment="gravity"
+            android:layout_marginLeft="@dimen/vs_10"
             android:textColor="@android:color/white"
             android:textSize="@dimen/ts_30"
             android:textStyle="bold" />
@@ -62,8 +63,8 @@
             android:id="@+id/mGridView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/vs_10"
-            android:layout_marginBottom="@dimen/vs_10"
+            android:layout_marginTop="@dimen/vs_5"
+            android:layout_marginBottom="@dimen/vs_0"
             android:paddingLeft="@dimen/vs_50"
             android:paddingRight="@dimen/vs_50"
             app:tv_selectedItemIsCentered="true" />
