--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -438,20 +438,21 @@
         android:paddingLeft="@dimen/vs_20"
         android:paddingTop="@dimen/vs_20"
         android:paddingRight="@dimen/vs_20"
-        android:paddingBottom="@dimen/vs_3"
+        android:paddingBottom="@dimen/vs_0"
         android:visibility="gone"
         tools:visibility="visible">
         
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/vs_2"
+            android:layout_marginBottom="@dimen/vs_0"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/curr_time2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
                 android:paddingEnd="@dimen/vs_8"
                 android:paddingRight="@dimen/vs_8"
                 android:text="00:00"
@@ -462,23 +463,25 @@
                 android:id="@+id/seekBar2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="bottom"
                 android:layout_weight="1"
                 android:background="@null"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:max="1000"
-                android:maxHeight="@dimen/vs_4"
-                android:minHeight="@dimen/vs_3"
+                android:maxHeight="@dimen/vs_2"
+                android:minHeight="@dimen/vs_1"
                 android:padding="@dimen/vs_0"
                 android:paddingStart="@dimen/vs_0"
                 android:paddingEnd="@dimen/vs_0"
+                android:paddingBottom="@dimen/vs_3"
                 android:progressDrawable="@drawable/shape_player_control_vod_seek"
                 android:thumb="@drawable/shape_player_control_vod_seek_thumb"
                 android:thumbOffset="@dimen/vs_0" />
 
             <TextView
                 android:id="@+id/total_time2"
+                android:layout_gravity="bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/vs_8"
