--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -7,43 +7,43 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-            android:id="@+id/tv_top_l_container"
-            android:layout_width="720dp"
+        android:id="@+id/tv_top_l_container"
+        android:layout_width="720dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/vs_0"
+        android:layout_marginLeft="@dimen/vs_0"
+        android:layout_marginTop="@dimen/vs_0"
+        android:orientation="vertical"
+        android:tag="tv_top_container"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/tv_info_name1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:tag="tv_top_container"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:layout_marginStart="@dimen/vs_20"
-            android:layout_marginLeft="@dimen/vs_20"
-            android:layout_marginTop="@dimen/vs_10"
-            android:orientation="vertical">
+            android:layout_gravity="left"
+            android:width="480dp"
+            android:ellipsize="end"
+            android:paddingLeft="@dimen/vs_2"
+            android:paddingTop="@dimen/vs_0"
+            android:singleLine="true"
+            android:text="http://"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/vs_22" />
 
-            <TextView
-                android:id="@+id/tv_info_name1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:width="680dp"
-                android:paddingTop="@dimen/vs_20"
-                android:paddingLeft="@dimen/vs_20"
-                android:text="http://"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
-
-            <TextView
-                android:id="@+id/tv_videosize"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:paddingLeft="@dimen/vs_20"
-                android:tag="vod_video_size"
-                android:text="[ 1024 x 768 ]"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
+        <TextView
+            android:id="@+id/tv_videosize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingLeft="@dimen/vs_20"
+            android:tag="vod_video_size"
+            android:text="[ w x h ]"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/ts_20" />
 
     </LinearLayout>
 
@@ -55,8 +55,8 @@
         android:visibility="gone"
         tools:visibility="visible"
         android:layout_gravity="right"
-        android:layout_marginRight="@dimen/vs_20"
-        android:layout_marginTop="@dimen/vs_10"
+        android:layout_marginRight="@dimen/vs_0"
+        android:layout_marginTop="@dimen/vs_0"
         android:orientation="vertical">
 
         <TextView
@@ -66,8 +66,8 @@
             android:layout_gravity="right"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingTop="@dimen/vs_20"
-            android:paddingRight="@dimen/vs_20"
+            android:paddingTop="@dimen/vs_0"
+            android:paddingRight="@dimen/vs_0"
             android:tag="vod_control_pause_time"
             android:text="00:00:00"
             android:textColor="@android:color/white"
@@ -80,11 +80,11 @@
             android:layout_gravity="right"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingRight="@dimen/vs_20"
+            android:paddingRight="@dimen/vs_2"
             android:tag="vod_control_pause_time"
             android:text="0Kb/s"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/ts_20" />
+            android:textSize="@dimen/vs_15" />
     </LinearLayout>
 
     <com.github.tvbox.osc.subtitle.widget.SimpleSubtitleView
@@ -407,6 +407,7 @@
                 android:maxHeight="@dimen/vs_6"
                 android:minHeight="@dimen/vs_6"
                 android:padding="@dimen/vs_0"
+                android:paddingBottom="@dimen/vs_1"
                 android:paddingStart="@dimen/vs_0"
                 android:paddingEnd="@dimen/vs_0"
                 android:progressDrawable="@drawable/shape_player_control_vod_seek"
@@ -463,7 +464,7 @@
                 android:id="@+id/seekBar2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
+                android:layout_gravity="center"
                 android:layout_weight="1"
                 android:background="@null"
                 android:focusable="false"
@@ -473,8 +474,8 @@
                 android:minHeight="@dimen/vs_1"
                 android:padding="@dimen/vs_0"
                 android:paddingStart="@dimen/vs_0"
-                android:paddingEnd="@dimen/vs_0"
-                android:paddingBottom="@dimen/vs_3"
+                android:paddingEnd="@dimen/vs_10"
+                android:paddingBottom="@dimen/vs_1"
                 android:progressDrawable="@drawable/shape_player_control_vod_seek"
                 android:thumb="@drawable/shape_player_control_vod_seek_thumb"
                 android:thumbOffset="@dimen/vs_0" />
@@ -491,71 +492,6 @@
                 android:textSize="@dimen/ts_16" />
         </LinearLayout>
     </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/tv_pause_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:tag="vod_control_pause"
-        android:visibility="gone"
-        tools:visibility="visible">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginStart="@dimen/vs_20"
-            android:layout_marginLeft="@dimen/vs_20"
-            android:layout_marginTop="@dimen/vs_10"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_info_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:maxLines="3"
-                android:ellipsize="end"
-                android:paddingTop="@dimen/vs_20"
-                android:paddingLeft="@dimen/vs_20"
-                android:text="http://"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="@dimen/vs_280"
-            android:layout_height="@dimen/vs_200"
-            android:layout_gravity="center"
-            android:background="@drawable/shape_user_focus"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="@dimen/vs_60"
-                android:layout_height="@dimen/vs_60"
-                android:layout_gravity="center"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:src="@drawable/icon_play" />
-
-            <TextView
-                android:id="@+id/tv_pause_progress_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/vs_20"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:tag="vod_control_pause_t"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_30"
-                tools:text="100" />
-        </LinearLayout>
-
-    </FrameLayout>
 
     <TextView
         android:id="@+id/tv_slide_progress_text"
@@ -585,6 +521,71 @@
         android:orientation="vertical"
         android:visibility="gone"
         tools:visibility="visible">
+
+        <FrameLayout
+            android:id="@+id/tv_pause_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:tag="vod_control_pause"
+            android:visibility="gone"
+            tools:visibility="visible">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_marginStart="@dimen/vs_20"
+                android:layout_marginLeft="@dimen/vs_20"
+                android:layout_marginTop="@dimen/vs_10"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_info_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    android:paddingLeft="@dimen/vs_20"
+                    android:paddingTop="@dimen/vs_20"
+                    android:text="http://"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/ts_20" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="@dimen/vs_280"
+                android:layout_height="@dimen/vs_200"
+                android:layout_gravity="center"
+                android:background="@drawable/shape_user_focus"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="@dimen/vs_60"
+                    android:layout_height="@dimen/vs_60"
+                    android:layout_gravity="center"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:src="@drawable/icon_play" />
+
+                <TextView
+                    android:id="@+id/tv_pause_progress_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/vs_20"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:tag="vod_control_pause_t"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/ts_30"
+                    tools:text="100" />
+            </LinearLayout>
+
+        </FrameLayout>
 
         <ImageView
             android:id="@+id/tv_progress_icon"
