--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -302,13 +303,13 @@
 
 
                 <ImageView
-                    android:id="@+id/pkg1_icon"
                     android:layout_width="@dimen/vs_60"
                     android:layout_height="@dimen/vs_60"
                     android:layout_gravity="center"
                     android:alpha="0.75"
                     android:paddingLeft="@dimen/vs_15"
-                    android:src="@drawable/app_icon" />
+                    android:src="@drawable/app_icon"
+                    android:tag="@+id/pkg1_icon" />
                 <!--                    android:src="@drawable/icon_live" />-->
 
                 <TextView
