--- a/app/src/main/res/drawable/shape_player_control_vod_seek_thumb_normal.xml
+++ b/app/src/main/res/drawable/shape_player_control_vod_seek_thumb_normal.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+    android:shape="rectangle"
+    >
+    <!--    android:shape="oval"-->
+
     <!--    进度条圆点常规状态颜色-->
-<!--    <solid android:color="@color/color_02F8E1" />-->
-    <solid android:color="@color/color_1890FF" />
+    <solid android:color="@color/color_02F8E1" />
+<!--    <solid android:color="@color/color_CC0889B8" />-->
+    <solid android:color="@color/color_FF0057" />
+<!--    <size-->
+<!--        android:width="@dimen/vs_8"-->
+<!--        android:height="@dimen/vs_8" />-->
     <size
-        android:width="@dimen/vs_10"
-        android:height="@dimen/vs_10" />
+        android:width="@dimen/vs_3"
+        android:height="@dimen/vs_6" />
 </shape>
