--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -353,7 +353,7 @@
             android:layout_marginBottom="@dimen/vs_10"
             android:orientation="horizontal"
             android:visibility="gone"
-            tools:visibility="visible">
+            tools:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -378,52 +378,52 @@
         </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/vs_10"
-            android:orientation="horizontal">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginBottom="@dimen/vs_10"-->
+<!--            android:orientation="horizontal">-->
 
-            <TextView
-                android:id="@+id/curr_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/vs_10"
-                android:paddingRight="@dimen/vs_10"
-                android:text="00:00"
-                android:textColor="@color/color_FFFFFF"
-                android:textSize="@dimen/ts_20" />
+<!--            <TextView-->
+<!--                android:id="@+id/curr_time"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:paddingEnd="@dimen/vs_10"-->
+<!--                android:paddingRight="@dimen/vs_10"-->
+<!--                android:text="00:00"-->
+<!--                android:textColor="@color/color_FFFFFF"-->
+<!--                android:textSize="@dimen/ts_20" />-->
 
-            <SeekBar
-                android:id="@+id/seekBar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@null"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:max="1000"
-                android:maxHeight="@dimen/vs_6"
-                android:minHeight="@dimen/vs_6"
-                android:padding="@dimen/vs_0"
-                android:paddingBottom="@dimen/vs_1"
-                android:paddingStart="@dimen/vs_0"
-                android:paddingEnd="@dimen/vs_0"
-                android:progressDrawable="@drawable/shape_player_control_vod_seek"
-                android:thumb="@drawable/shape_player_control_vod_seek_thumb"
-                android:thumbOffset="@dimen/vs_0" />
+<!--            <SeekBar-->
+<!--                android:id="@+id/seekBar"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_weight="1"-->
+<!--                android:background="@null"-->
+<!--                android:focusable="false"-->
+<!--                android:focusableInTouchMode="false"-->
+<!--                android:max="1000"-->
+<!--                android:maxHeight="@dimen/vs_6"-->
+<!--                android:minHeight="@dimen/vs_6"-->
+<!--                android:padding="@dimen/vs_0"-->
+<!--                android:paddingBottom="@dimen/vs_1"-->
+<!--                android:paddingStart="@dimen/vs_0"-->
+<!--                android:paddingEnd="@dimen/vs_0"-->
+<!--                android:progressDrawable="@drawable/shape_player_control_vod_seek"-->
+<!--                android:thumb="@drawable/shape_player_control_vod_seek_thumb"-->
+<!--                android:thumbOffset="@dimen/vs_0" />-->
 
-            <TextView
-                android:id="@+id/total_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/vs_10"
-                android:paddingLeft="@dimen/vs_10"
-                android:text="00:00"
-                android:textColor="@color/color_FFFFFF"
-                android:textSize="@dimen/ts_20" />
-        </LinearLayout>
+<!--            <TextView-->
+<!--                android:id="@+id/total_time"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:paddingStart="@dimen/vs_10"-->
+<!--                android:paddingLeft="@dimen/vs_10"-->
+<!--                android:text="00:00"-->
+<!--                android:textColor="@color/color_FFFFFF"-->
+<!--                android:textSize="@dimen/ts_20" />-->
+<!--        </LinearLayout>-->
 
 
     </LinearLayout>
@@ -442,7 +442,7 @@
         android:paddingBottom="@dimen/vs_0"
         android:visibility="gone"
         tools:visibility="visible">
-        
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -458,13 +458,13 @@
                 android:paddingRight="@dimen/vs_8"
                 android:text="00:00"
                 android:textColor="@color/color_FFFFFF"
-                android:textSize="@dimen/ts_16" />
+                android:textSize="@dimen/ts_20" />
 
             <SeekBar
                 android:id="@+id/seekBar2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="center|bottom"
                 android:layout_weight="1"
                 android:background="@null"
                 android:focusable="false"
@@ -489,7 +489,7 @@
                 android:paddingLeft="@dimen/vs_8"
                 android:text="00:00"
                 android:textColor="@color/color_FFFFFF"
-                android:textSize="@dimen/ts_16" />
+                android:textSize="@dimen/ts_20" />
         </LinearLayout>
     </LinearLayout>
 
@@ -512,7 +512,7 @@
     <LinearLayout
         android:id="@+id/tv_progress_container"
         android:layout_width="@dimen/vs_280"
-        android:layout_height="@dimen/vs_200"
+        android:layout_height="@dimen/vs_220"
         android:layout_gravity="center"
         android:background="@drawable/shape_user_focus"
         android:focusable="false"
@@ -530,28 +530,28 @@
             android:visibility="gone"
             tools:visibility="visible">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginStart="@dimen/vs_20"
-                android:layout_marginLeft="@dimen/vs_20"
-                android:layout_marginTop="@dimen/vs_10"
-                android:orientation="vertical">
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_gravity="left"-->
+            <!--                android:layout_marginStart="@dimen/vs_20"-->
+            <!--                android:layout_marginLeft="@dimen/vs_20"-->
+            <!--                android:layout_marginTop="@dimen/vs_10"-->
+            <!--                android:orientation="vertical">-->
 
-                <TextView
-                    android:id="@+id/tv_info_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:ellipsize="end"
-                    android:maxLines="3"
-                    android:paddingLeft="@dimen/vs_20"
-                    android:paddingTop="@dimen/vs_20"
-                    android:text="http://"
-                    android:textColor="@android:color/white"
-                    android:textSize="@dimen/ts_20" />
-            </LinearLayout>
+            <!--                <TextView-->
+            <!--                    android:id="@+id/tv_info_name"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:layout_gravity="left"-->
+            <!--                    android:ellipsize="end"-->
+            <!--                    android:maxLines="3"-->
+            <!--                    android:paddingLeft="@dimen/vs_20"-->
+            <!--                    android:paddingTop="@dimen/vs_20"-->
+            <!--                    android:text=""-->
+            <!--                    android:textColor="@android:color/white"-->
+            <!--                    android:textSize="@dimen/ts_20" />-->
+            <!--            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="@dimen/vs_280"
@@ -560,12 +560,13 @@
                 android:background="@drawable/shape_user_focus"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
+                android:layout_marginTop="@dimen/vs_20"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="@dimen/vs_60"
-                    android:layout_height="@dimen/vs_60"
+                    android:layout_width="@dimen/vs_80"
+                    android:layout_height="@dimen/vs_80"
                     android:layout_gravity="center"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
@@ -582,7 +583,7 @@
                     android:tag="vod_control_pause_t"
                     android:textColor="@android:color/white"
                     android:textSize="@dimen/ts_30"
-                    tools:text="100" />
+                    tools:text="0:0/0:0" />
             </LinearLayout>
 
         </FrameLayout>
@@ -628,7 +629,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:tag="play_load_net_speed"
-        android:text="0"
+        android:text=""
         android:textColor="@color/color_FFFFFF"
         android:textSize="@dimen/ts_20" />
 
@@ -655,4 +656,5 @@
         android:src="@drawable/icon_unlock"
         android:visibility="invisible" />
 
+<!--    // ?-->
 </FrameLayout>
